[XL] enable the fetching and building using development version of perl
git-svn-id: http://svn.perlide.org/padre/trunk/Perl-Dist-XL@9551 bc93166f-e056-4eb9-8c59-0a0840647e1b

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 
-
-	eliminate existing PERL5LIB= in run time
+v0.02
+	Eliminate existing PERL5LIB= in run time
+	Allow both stable and development releases of perl
 
 v0.01 2009.12.07
 	First version released publicly
