--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 
-v0.03
+v0.03 2009.12.09
+	First listin all prereqs of Padre and the Perl6 plugin
+	Then using full Mini CPAN mirror
+	Include the Catalyst plugin as well
 
 
 v0.02 2009.12.08
